--- a/package.json
+++ b/package.json
@@ -21,25 +21,6 @@
   },
   "homepage": "https://github.com/EvenToNight/EvenToNight#readme",
   "devDependencies": {
-    "semantic-release-preconfigured-conventional-commits": "latest"
-  },
-  "release": {
-    "branches": [
-      "main"
-    ],
-    "preset": "conventionalcommits",
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/github",
-      [
-        "@semantic-release/git",
-        {
-          "assets": ["CHANGELOG.md", "package.json"],
-          "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-        }
-      ]
-    ]
+    "semantic-release-preconfigured-conventional-commits": "24.2.9"
   }
 }
