--- a/.github/workflows/check-style.yml
+++ b/.github/workflows/check-style.yml
@@ -6,25 +6,22 @@ on:
     branches: ["main"]
 
 jobs:
-  scalafmt:
-    runs-on: ubuntu-latest
+  check-style:
+    runs-on: ubuntu-22.04
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          distribution: temurin
-          java-version: '17'
-
+          distribution: 'temurin'
+          java-version: '21'
       - name: Cache Gradle
         uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*','**/gradle-wrapper.properties') }}
-
-      - name: Run check style
-        run: ./gradlew --no-configuration-cache checkStyle
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*','**/gradle-wrapper.properties') }}    
+      - name: Check style
+        run: ./gradlew checkStyle
