--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
-name: New release
+name: Make New Release and Build & Push Docker Images
 on:
   push:
     branches:
       - main
   workflow_dispatch:
-
 
 env:
   JAVA_VERSION: 21
@@ -136,3 +135,58 @@ jobs:
           git tag "$new_tag" && git push origin "$new_tag"
           gh release create "$new_tag" --title "$new_tag" --notes "Automated pre-release" --prerelease
           echo "✅ Created $new_tag"
+
+  build-and-push-docker-images:
+    needs: release
+    if: ${{ needs.release.outputs.release_done == 'true'}}
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+      attestations: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Find all modified service directories with Dockerfiles
+        id: services
+        run: |
+          dirs=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^services/.*Dockerfile' | sed 's|/Dockerfile||')
+          echo "Found modified service dirs:"
+          echo "$dirs"
+          echo "dirs=$dirs" >> $GITHUB_OUTPUT
+
+      - name: Get latest GitHub Release tag
+        id: get_tag
+        uses: pozetroninc/github-action-get-latest-release@v0.8.0
+        with:
+          repository: ${{ github.repository }}
+
+
+      - name: Build and push Docker images
+        run: |
+          repo_lower=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          release_tag="${{ steps.get_tag.outputs.release }}"
+          echo "🏷️ Using release tag: $release_tag"
+
+          for dir in ${{ steps.services.outputs.dirs }}; do
+            service_name=$(basename "$dir")
+            image_base="ghcr.io/${repo_lower}/${service_name}"
+            image_latest="${image_base}:latest"
+            image_release="${image_base}:${release_tag}"
+
+            echo "🚀 Building image for $service_name"
+            docker build -t "$image_latest" -t "$image_release" "$dir"
+
+            echo "📤 Pushing $image_latest and $image_release"
+            docker push "$image_latest"
+            docker push "$image_release"
+          done
