--- a/services/frontend/docker-compose.yaml
+++ b/services/frontend/docker-compose.yaml
@@ -5,6 +5,10 @@ services:
       - eventonight-network
     environment:
       - PORT=${FRONTEND_SERVICE_PORT}
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=Host(`${HOST}`)"
+      - "traefik.http.routers.frontend.entrypoints=web"
     restart: unless-stopped
 
 networks:
