--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,14 +105,14 @@ jobs:
       - name: Evaluate release
         id: evaluate_release
         run: |
-          pre_release=$([[ "${{ steps.semantic-release.outputs.release_done }}" == "false" && ( "${{ steps.detect_services.outputs.services_changed }}" == "true" || "${{ steps.detect_infrastructure.outputs.infrastructure_changed }}" == "true" ) ]])
-          release=$([[ "${{ steps.semantic-release.outputs.release_done }}" == "true" || "$pre_release" == "true" ]])
+          pre_release=$([[ "${{ steps.semantic-release.outputs.release_done }}" == "false" && ( "${{ steps.detect_services.outputs.services_changed }}" == "true" || "${{ steps.detect_infrastructure.outputs.infrastructure_changed }}" == "true" ) ]] && echo "true" || echo "false")
+          release=$([[ "${{ steps.semantic-release.outputs.release_done }}" == "true" || "$pre_release" == "true" ]] && echo "true" || echo "false")
 
           echo "pre-release=$pre_release" >> $GITHUB_OUTPUT
           echo "release=$release" >> $GITHUB_OUTPUT
 
       - name: Create dev pre-release
-        if: ${{steps.evaluate_release.outputs.pre_release == 'true'}}
+        if: ${{ steps.evaluate_release.outputs.pre_release == 'true' }}
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
         run: |
