--- a/services/users/.scalafmt.conf
+++ b/services/users/.scalafmt.conf
@@ -1,3 +1,15 @@
 version = 3.9.4
-preset = default
 runner.dialect = scala3
+
+maxColumn = 120
+indent.main = 2
+align.preset = more
+rewrite.rules = [SortImports]
+newlines.source = keep
+
+docstrings {
+  style = SpaceAsterisk
+  oneline = fold
+  removeEmpty = true
+  wrap = no
+}
