chore(frontend): fix dockerfile in frontend microservice

--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:alpine3.21 AS builder
 WORKDIR /home/app
 
-COPY package*.json ./
+COPY package.json ./
 RUN npm install
 COPY . .
+ENV NODE_ENV=production
 RUN npm run build
+RUN npm prune --omit=dev
 
 FROM node:alpine3.21
 WORKDIR /home/app
@@ -12,4 +14,4 @@ COPY --from=builder /home/app/dist ./dist
 COPY --from=builder /home/app/node_modules ./node_modules
 EXPOSE $PORT
 RUN npm install -g serve@14.2.4
-ENTRYPOINT serve -s dist -l $PORT --no-clipboard
+ENTRYPOINT ["serve", "-s", "dist", "-l", "$PORT", "--no-clipboard"]
