--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:alpine3.21 AS builder
 WORKDIR /home/app
 
-COPY package.json ./
+COPY ./services/frontend/package.json ./
 RUN npm install
-COPY . .
+COPY ./services/frontend .
 ENV NODE_ENV=production
 RUN npm run build
 RUN npm prune --omit=dev
@@ -14,4 +14,4 @@ COPY --from=builder /home/app/dist ./dist
 COPY --from=builder /home/app/node_modules ./node_modules
 EXPOSE $PORT
 RUN npm install -g serve@14.2.4
-ENTRYPOINT ["serve", "-s", "dist", "-l", "$PORT", "--no-clipboard"]
+ENTRYPOINT serve -s dist -l $PORT --no-clipboard
