--- a/services/frontend/docker-compose-dev.yaml
+++ b/services/frontend/docker-compose-dev.yaml
@@ -1,6 +1,7 @@
 services:
   frontend:
     build:
-      context: ./services/frontend
+      context: .
+      dockerfile: ./services/frontend/Dockerfile
     ports:
       - "${FRONTEND_SERVICE_PORT}:${FRONTEND_SERVICE_PORT}"  
