--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,4 @@ TRAEFIK_DASHBOARD_PORT=8080
 TRAEFIK_SERVICE_PORT=80
 TRAEFIK_SECURE_SERVICE_PORT=443
 EVENTS_SERVICE_PORT=9010
+USERS_SERVICE_PORT=9000
