chore(users): configure rabbit connection to be used in production

--- a/services/users/docker-compose.yaml
+++ b/services/users/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       - users-network
     environment:
       - PORT=${USERS_SERVICE_PORT}
+      - RABBITMQ_HOST=rabbitmq-users
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.users.rule=Host(`users.${HOST}`)"
