--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/EvenToNight/EvenToNight#readme",
   "devDependencies": {
-    "semantic-release-preconfigured-conventional-commits": "1.1.146"
+    "semantic-release-preconfigured-conventional-commits": "1.1.146",
+    "swagger-ui-dist": "^5.29.5"
   },
   "release": {
     "branches": [
@@ -36,7 +37,10 @@
       [
         "@semantic-release/git",
         {
-          "assets": ["CHANGELOG.md", "package.json"],
+          "assets": [
+            "CHANGELOG.md",
+            "package.json"
+          ],
           "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
         }
       ]
