--- a/docs/openAPI/openapi/users.yaml
+++ b/docs/openAPI/openapi/users.yaml
@@ -5,7 +5,7 @@ info:
 paths:
   /users:
     get:
-      summary: Ottieni la lista degli utenti
+      summary: Get users list
       responses:
         '200':
           description: OK
