chore(users): update scalafix configuration

--- a/services/users/.scalafix.conf
+++ b/services/users/.scalafix.conf
@@ -1,10 +1,10 @@
 rules = [
   DisableSyntax
+  RemoveUnused
   OrganizeImports
   RedundantSyntax
-  RemoveUnused
 ]
 
 DisableSyntax.noThrows = true
-DisableSyntax.noNulls = true
+DisableSyntax.noNulls = false
 DisableSyntax.noReturns = true
