chore(events-config): config wartremover and scalafix to events microservice

--- a/services/events/.scalafmt.conf
+++ b/services/events/.scalafmt.conf
@@ -1,15 +1,14 @@
-version = "3.5.8"
+version = 3.9.4
 runner.dialect = scala3
 
 maxColumn = 120
 indent.main = 2
 align.preset = more
-rewrite.rules = [SortImports]
 newlines.source = keep
 
 docstrings {
-  style = SpaceAsterisk                       # Scala doc style with space before asterisk
-  oneline = fold                              # Write scaladoc comments in a single line if they fit
-  removeEmpty = true                          # Remove empty scaladoc comments
-  wrap = no                                   # Wrap scaladoc comments according to maxColumn
+  style = SpaceAsterisk
+  oneline = fold
+  removeEmpty = true
+  wrap = no
 }
