--- a/services/users/docker-compose.yaml
+++ b/services/users/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       - users-network
     environment:
       - PORT=${USERS_SERVICE_PORT}
-      - RABBITMQ_HOST=rabbitmq-users
+      - RABBITMQ_HOST=rabbitmq
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.users.rule=Host(`users.${HOST}`)"
@@ -16,20 +16,8 @@ services:
     depends_on:
       mongo-users:
         condition: service_healthy
-      rabbitmq-users:
+      rabbitmq:
         condition: service_healthy
-
-  rabbitmq-users:
-    image: rabbitmq:3-management-alpine
-    restart: unless-stopped
-    networks:
-      - users-network
-    healthcheck:
-      test: [ 'CMD', 'rabbitmq-diagnostics', 'status' ]
-      interval: 2s
-      timeout: 3s
-      retries: 100
-      start_period: 60s
 
   mongo-users:
     image: mongo
