feat(project-configuration): complete basic project setup

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -42,7 +42,7 @@ jobs:
           cp ./docs/logo.png ${{ env.SITE }}/logo.png
           mkdir -p ${{ env.SITE }}/openapi
           cp -R ./docs/openAPI ${{ env.SITE }}/
-          cd -R ./docs/asynAPI ${{ env.SITE }}/
+          cp -R ./docs/asyncAPI ${{ env.SITE }}/
       
       - name: Install dependencies
         run: npm install
