chore(mongo-express): add mongo express to compose in events and users

--- a/services/events/docker-compose.yaml
+++ b/services/events/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
       - events-network
     environment:
       - PORT=${EVENTS_SERVICE_PORT}
+      - RABBITMQ_HOST=rabbitmq
+      - MONGO_HOST=mongo-events
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.events.rule=Host(`events.${HOST}`)"
