--- a/services/users/docker-compose.yaml
+++ b/services/users/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     environment:
       - PORT=${USERS_SERVICE_PORT}
       - RABBITMQ_HOST=rabbitmq
+      - MONGO_HOST=mongo-users
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.users.rule=Host(`users.${HOST}`)"
