--- a/dev-environment/docker-compose-dev.yaml
+++ b/dev-environment/docker-compose-dev.yaml
@@ -4,7 +4,7 @@ services:
       - '15672:15672'
 
   mongo-express:
-    image: mongo-express:latest
+    image: mongo-express:1.0.2-20-alpine3.19
     restart: unless-stopped
     networks:
       - dev-network
