--- a/services/users/docker-compose-dev.yaml
+++ b/services/users/docker-compose-dev.yaml
@@ -5,3 +5,16 @@ services:
       dockerfile: ./services/users/Dockerfile
     ports:
       - "${USERS_SERVICE_PORT}:${USERS_SERVICE_PORT}"  
+
+  mongo-users-express:
+    image: mongo-express:1.0.2-20-alpine3.19
+    restart: unless-stopped
+    networks:
+      - events-network
+    ports:
+      - '${MONGO_EXPRESS_USERS_PORT}:8081'
+    environment:
+      ME_CONFIG_MONGODB_SERVER: 'mongo-users'
+    depends_on:
+      mongo-users:
+        condition: service_healthy
