--- a/services/events/.scalafix.conf
+++ b/services/events/.scalafix.conf
@@ -8,3 +8,4 @@ rules = [
 DisableSyntax.noThrows = true
 DisableSyntax.noNulls = false
 DisableSyntax.noReturns = true
+DisableSyntax.noAsInstanceOf = true
