chore(location): test getting location from browser

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,4 +34,5 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
+  "java.compile.nullAnalysis.mode": "automatic",
 }
