build(fontend): set esbuild version in package.json to avoid mismatch

--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:alpine3.21 AS builder
+FROM node:25-alpine3.22 AS builder
 WORKDIR /home/app
 
 COPY ./services/frontend/package.json ./
@@ -8,10 +8,9 @@ ENV NODE_ENV=production
 RUN npm run build
 RUN npm prune --omit=dev
 
-FROM node:alpine3.21
+FROM node:25-alpine3.22
 WORKDIR /home/app
 COPY --from=builder /home/app/dist ./dist
 COPY --from=builder /home/app/node_modules ./node_modules
-EXPOSE $PORT
-RUN npm install -g serve@14.2.4
-ENTRYPOINT serve -s dist -l $PORT --no-clipboard
+RUN npm install -g serve@14.2.5
+ENTRYPOINT serve -s dist --no-clipboard
