--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "esbuild":"0.25.11",
     "@eslint/js": "^9.37.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.18.6",
