feat(media): config media service to store images and media

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,4 @@ USERS_SERVICE_PORT=9000
 MONGO_EXPRESS_USERS_PORT=9001
 EVENTS_SERVICE_PORT=9010
 MONGO_EXPRESS_EVENTS_PORT=9011
+MEDIA_SERVICE_PORT=9020
