--- a/services/media/package.json
+++ b/services/media/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.679.0",
@@ -17,6 +19,11 @@
     "@types/express": "^5.0.5",
     "@types/multer": "2.0.0",
     "@types/node": "^24.10.0",
-    "typescript": "^5.9.3"
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.54.0",
+    "typescript": "^5.9.3",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1"
   }
 }
