--- a/services/media/docker-compose.yaml
+++ b/services/media/docker-compose.yaml
@@ -10,9 +10,7 @@ services:
       - MINIO_ACCESS_KEY=admin
       - MINIO_SECRET_KEY=password
       - MINIO_BUCKET=event-images
-      - MINIO_PUBLIC_URL=http://minio:9000
-    ports:
-      - "9020:9020"
+      - MINIO_PUBLIC_URL=http://minio:9021
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.media.rule=Host(`media.${HOST}`)"
@@ -24,13 +22,12 @@ services:
   minio:
     image: minio/minio
     container_name: minio
-    command: server /data --console-address ":9001"
+    command: server /data
+    ports:
+      - "9021:9000"
     environment:
       - MINIO_ROOT_USER=admin
       - MINIO_ROOT_PASSWORD=password
-    ports:
-      - "9021:9000"
-      - "9022:9001"
     volumes:
       - minio-data:/data
     networks:
