--- a/services/media/package.json
+++ b/services/media/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.679.0",
+    "@aws-sdk/client-s3": "3.668.0",
     "express": "^4.18.2",
     "multer": "1.4.5-lts.1"
   },
@@ -23,7 +23,6 @@
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
     "typescript": "^5.9.3",
-    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
 }
