--- a/.github/workflows/test-and-coverage.yml
+++ b/.github/workflows/test-and-coverage.yml
@@ -29,13 +29,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Run tests and generate coverage report
-        run: ./gradlew clean test jacocoTestReport
+      - name: Run tests and generate coverage reports
+        run: ./gradlew clean runCoverage --no-configuration-cache
 
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: build/reports/jacoco/test/jacocoTestReport.xml
+          files: |
+            services/events/build/reports/jacoco/test/jacocoTestReport.xml
+            services/media/coverage/lcov.info
           flags: unittests
           fail_ci_if_error: true
