--- a/services/media/docker-compose.yaml
+++ b/services/media/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - PORT=9020
       - MINIO_ENDPOINT=http://minio:9000
       - MINIO_ACCESS_KEY=eventonightadmin
-      - MINIO_SECRET_KEY=eventonightpassword
+      - MINIO_SECRET_KEY=${MINIO_PASSWORD:?}
       - MINIO_BUCKET=eventonight-media
       - MINIO_PUBLIC_URL=http://minio:9021
     labels:
@@ -27,7 +27,7 @@ services:
       - "9021:9000"
     environment:
       - MINIO_ROOT_USER=eventonightadmin
-      - MINIO_ROOT_PASSWORD=eventonightpassword
+      - MINIO_ROOT_PASSWORD=${MINIO_PASSWORD:?}
     volumes:
       - minio-data:/data
     networks:
