--- a/services/media/package.json
+++ b/services/media/package.json
@@ -5,9 +5,12 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "lint:fix": "eslint . --ext .ts --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.668.0",
@@ -17,12 +20,15 @@
   "devDependencies": {
     "@types/dotenv": "6.1.1",
     "@types/express": "^5.0.5",
+    "@types/jest": "^29.5.8",
     "@types/multer": "2.0.0",
     "@types/node": "^24.10.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
-    "typescript": "^5.9.3",
-    "ts-node": "^10.9.1"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.9.3"
   }
 }
