--- a/services/media/package.json
+++ b/services/media/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "jest",
@@ -14,14 +14,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.668.0",
-    "express": "^4.18.2",
-    "multer": "1.4.5-lts.1"
+    "express": "^4.21.1",
+    "multer": "^2.0.1"
   },
   "devDependencies": {
-    "@types/dotenv": "6.1.1",
     "@types/express": "^5.0.5",
     "@types/jest": "^29.5.8",
-    "@types/multer": "2.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
