chore(openAPI): add get and post API for media service in OpenAPI

--- a/docs/openAPI/openapi/events.yaml
+++ b/docs/openAPI/openapi/events.yaml
@@ -10,7 +10,7 @@ servers:
 paths:
   /events/draft:
     get:
-      summary: Get events list
+      summary: Create a draft event
       responses:
         '200':
           description: OK
