--- a/services/media/package.json
+++ b/services/media/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.668.0",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "multer": "^2.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jest": "^29.5.8",
     "@types/multer": "^2.0.0",
